fix: 调整z-index值范围

--- a/src/style/cpns/clip-card.less
+++ b/src/style/cpns/clip-card.less
@@ -4,7 +4,7 @@
   left: 10%;
   width: 80%;
   height: 80%;
-  z-index: 999999999;
+  z-index: 500;
   background-color: @bg-color;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
