--- a/src/style/cpns/clip-float-btn.less
+++ b/src/style/cpns/clip-float-btn.less
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  z-index: 99999;
+  z-index: 100;
   bottom: 15px;
   right: 15px;
   height: 50px;
