--- a/src/style/cpns/clip-full-data.less
+++ b/src/style/cpns/clip-full-data.less
@@ -1,5 +1,5 @@
 .clip-full-wrapper {
-  z-index: 9999999999;
+  z-index: 101;
   position: fixed;
   top: 0;
   height: -webkit-fill-available;
@@ -14,7 +14,7 @@
   .clip-full-operate-list {
     position: fixed;
     right: 50%;
-    z-index: 99;
+    z-index: 102;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
@@ -56,7 +56,7 @@
   }
 }
 .clip-overlay {
-  z-index: 9999999;
+  z-index: 100;
   position: fixed;
   top: 0;
   height: 100%;
