--- a/src/style/cpns/clip-switch.less
+++ b/src/style/cpns/clip-switch.less
@@ -1,5 +1,5 @@
 .clip-switch {
-  z-index: 999;
+  z-index: 100;
   position: fixed;
   top: 0px;
   display: flex;
